--- a/1_Connector.ipynb
+++ b/1_Connector.ipynb
@@ -7,24 +7,23 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import pandas as pd\n",
     "from utils import create_engine as engine\n",
-    "import snowflake.connector\n",
-    "from snowflake.connector.pandas_tools import write_pandas\n",
-    "import pandas as pd"
+    "from snowflake.connector.pandas_tools import write_pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method SnowflakeCursor.close of <snowflake.connector.cursor.SnowflakeCursor object at 0x12f050f10>>"
+       "<bound method SnowflakeCursor.close of <snowflake.connector.cursor.SnowflakeCursor object at 0x105aef6a0>>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +285,7 @@
        "[100 rows x 11 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
